--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "homepage": "https://github.com/Paloma-Cruz/maeztra-db",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "api/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node api/server.js"
   },
   "repository": {
     "type": "git",
